# azeron-cli

./: Cargo.toml  README.md  example-profile.json
src/: main.rs
src/azeron/: button.rs  communication.rs  key_manager.rs  macros.rs  mod.rs  statics.rs  unsorted.rs
